<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TipsFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Tips_intro"
        android:text="Tips on proper waste managenent"
        android:textSize="25sp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textStyle="bold"
        android:textColor="#0a0a0a"/>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".TipsFragment"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tip_1"
            android:text="@string/tip_1"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="25dp"
            android:textColor="#0a0a0a"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tip_2"
            android:text="@string/tip_2"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textColor="#0a0a0a"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tip_3"
            android:text="@string/tip_3"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textColor="#0a0a0a"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tip_4"
            android:text="@string/tip_4"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textColor="#0a0a0a"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tip_5"
            android:text="@string/tip_5"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textColor="#0a0a0a"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tip_6"
            android:text="@string/tip_6"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textColor="#0a0a0a"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tip_7"
            android:text="@string/tip_7"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textColor="#0a0a0a"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tip_8"
            android:text="@string/tip_8"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textColor="#0a0a0a"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tip_9"
            android:text="@string/tip_9"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textColor="#0a0a0a"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tip_10"
            android:text="@string/tip_10"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textColor="#0a0a0a"/>



    </LinearLayout>
</FrameLayout>