<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5fcfd"
    tools:context=".HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/home"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/greetingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="Welcome"
            android:textColor="#0a0a0a"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="15dp"/>

        <TextView
            android:id="@+id/Intro_custFname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="145dp"
            android:layout_marginTop="25dp"
            android:text="User"
            android:textSize="30sp"
            android:textColor="#f5fcfd"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/collector_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="25dp"
            android:text="Your garbage is collected On Fridays"
            android:textSize="20sp"
            android:textColor="#262626"/>

    </RelativeLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".TipsFragment"
        android:layout_marginTop="120dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Pros_intro"
            android:text="Pros of recycling waste:"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="25dp"
            android:textStyle="bold"
            android:textColor="#0a0a0a"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tip_1"
            android:text="@string/pro_1"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:textColor="#0a0a0a"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tip_2"
            android:text="@string/pro_2"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textColor="#0a0a0a"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tip_3"
            android:text="@string/pro_3"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textColor="#0a0a0a"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tip_4"
            android:text="@string/pro_4"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textColor="#0a0a0a"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Cons_intro"
            android:text="Cons of waste recycling methods:"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="25dp"
            android:textStyle="bold"
            android:textColor="#0a0a0a"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tip_6"
            android:text="@string/con_1"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textColor="#0a0a0a"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tip_7"
            android:text="@string/con_2"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textColor="#0a0a0a"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tip_8"
            android:text="@string/con_3"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textColor="#0a0a0a"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tip_9"
            android:text="@string/con_4"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textColor="#0a0a0a"/>



    </LinearLayout>

</FrameLayout>